--- a/index/index.html
+++ b/index/index.html
@@ -15,16 +15,16 @@
         <nav>
             <ul class="ul-home">
                 <li class="ul-home__itens">
-                    <a href="#">home</a>
+                    <a href=".#">home</a>
                 </li>
                 <li class="ul-home__itens">
                     <a href="../sobre/sobre.html">sobre</a>
                 </li>
                 <li class="ul-home__itens">
-                    <a href="#">projetos</a>
+                    <a href="../projetos/projetos.html">projetos</a>
                 </li>
                 <li class="ul-home__itens">
-                    <a href="#">contato</a>
+                    <a href="../contatos/contatos.html">contatos</a>
                 </li>
             </ul>
         </nav>
