--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -20,10 +20,10 @@
                     <a href="#">sobre</a>
                 </li>
                 <li class="ul-home__itens">
-                    <a href="#">projetos</a>
+                    <a href="../projetos/projetos.html">projetos</a>
                 </li>
                 <li class="ul-home__itens">
-                    <a href="#">contato</a>
+                    <a href="../contatos/contatos.html">contatos</a>
                 </li>
             </ul>
         </nav>
@@ -54,6 +54,12 @@
                     <h3>Graduação</h3>
                     <p>Uninassau</p>
                     <p class="destaque">Analise e Desenvolvimento de Sistemas</p>
+                </div>
+
+                <div class="formacoes">
+                    <h3>Cursos Extras</h3>
+                    <p>Udemy</p>
+                    <p class="destaque">Curso Web Frontend Fundamentos</p>
                 </div>
             
             </section>
