--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joelson Vicente</title>
 
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index/index.css">
 </head>
 <body>
     <div class="home">
@@ -18,13 +18,13 @@
                     <a href=".#">home</a>
                 </li>
                 <li class="ul-home__itens">
-                    <a href="../sobre/sobre.html">sobre</a>
+                    <a href="sobre/sobre.html">sobre</a>
                 </li>
                 <li class="ul-home__itens">
-                    <a href="../projetos/projetos.html">projetos</a>
+                    <a href="projetos/projetos.html">projetos</a>
                 </li>
                 <li class="ul-home__itens">
-                    <a href="../contatos/contatos.html">contatos</a>
+                    <a href="contatos/contatos.html">contatos</a>
                 </li>
             </ul>
         </nav>
