--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="ul-home">
                 <li class="ul-home__itens">
-                    <a href="../index/index.html">home</a>
+                    <a href="../index.html">home</a>
                 </li>
                 <li class="ul-home__itens">
                     <a href="#">sobre</a>
