--- a/contatos/contatos.html
+++ b/contatos/contatos.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="ul-home">
                 <li class="ul-home__itens">
-                    <a href=".#">home</a>
+                    <a href="../index.html">home</a>
                 </li>
                 <li class="ul-home__itens">
                     <a href="../sobre/sobre.html">sobre</a>
