--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -59,6 +59,16 @@
                     <a href="https://github.com/joelsondeveloper/clone-instagram">ir ao repositório</a>
                 </div>
             </section>
+
+            <section class="project-home">
+                <h2>Projeto Moda Ora</h2>
+                <img src="../prints-projetos/moda ora.png" alt="blog semântico">
+                <span>projeto ficticio</span>
+                <div class="project-home__links">
+                    <a href=https://precious-torrone-689ddf.netlify.app>ir ao site</a>
+                    <a href="https://github.com/joelsondeveloper/curso-web-fundamentos/tree/main/projeto_moda_ora">ir ao repositório</a>
+                </div>
+            </section>
         </main>
 </body>
 </html>
