--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -69,6 +69,16 @@
                     <a href="https://github.com/joelsondeveloper/curso-web-fundamentos/tree/main/projeto_moda_ora">ir ao repositório</a>
                 </div>
             </section>
+
+            <section class="project-home">
+                <h2>Projeto Aprenser</h2>
+                <img src="../prints-projetos/Aprenser.png" alt="blog semântico">
+                <span>projeto ficticio</span>
+                <div class="project-home__links">
+                    <a href=https://aprenser-seven.vercel.app>ir ao site</a>
+                    <a href="https://github.com/joelsondeveloper/curso-web-fundamentos/tree/main/projeto_aprenser">ir ao repositório</a>
+                </div>
+            </section>
         </main>
 </body>
 </html>
