--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -79,6 +79,16 @@
                     <a href="https://github.com/joelsondeveloper/curso-web-fundamentos/tree/main/projeto_aprenser">ir ao repositório</a>
                 </div>
             </section>
+
+            <section class="project-home">
+                <h2>Projeto MyComponents</h2>
+                <img src="../prints-projetos/Captura de tela 2025-02-08 100811.png" alt="blog semântico">
+                <span>projeto ficticio</span>
+                <div class="project-home__links">
+                    <a href=https://mycomponents-hv73z0ons-joelsondevelopers-projects.vercel.app/>ir ao site</a>
+                    <a href="https://github.com/joelsondeveloper/curso-web-fundamentos/tree/main/MyComponents">ir ao repositório</a>
+                </div>
+            </section>
         </main>
 </body>
 </html>
