--- a/contatos/contatos.html
+++ b/contatos/contatos.html
@@ -11,23 +11,29 @@
 <body>
     <header class="header-home">
         <p>Joelson Vicente</p>
+        <input type="checkbox" id="menu" class="hide" />
+        <label for="menu" class="hamburguer">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
         <nav>
-            <ul class="ul-home">
-                <li class="ul-home__itens">
-                    <a href="../index.html">home</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="../sobre/sobre.html">sobre</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="../projetos/projetos.html">projetos</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="../contatos/contatos.html">contatos</a>
-                </li>
-            </ul>
+          <ul class="ul-home">
+            <li class="ul-home__itens">
+              <a href="../index.html">home</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="../sobre/sobre.html">sobre</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="../projetos/projetos.html">projetos</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="#">contatos</a>
+            </li>
+          </ul>
         </nav>
-        </header>
+      </header>
 
         <main class="main-home">
             <section class="contato-section">
@@ -43,7 +49,7 @@
                 <div class="contato-section__itens">
                     <a href="#">
                         <img src="../icones/gmail.png" alt="email">
-                        <p>vicentejoelson80@gamil.com</p>
+                        <p>vicentejoelson80@gmail.com</p>
                     </a>
                     
                 </div>
