--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -11,23 +11,29 @@
 <body>
     <header class="header-home">
         <p>Joelson Vicente</p>
+        <input type="checkbox" id="menu" class="hide" />
+        <label for="menu" class="hamburguer">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
         <nav>
-            <ul class="ul-home">
-                <li class="ul-home__itens">
-                    <a href="../index.html">home</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="#">sobre</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="../projetos/projetos.html">projetos</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="../contatos/contatos.html">contatos</a>
-                </li>
-            </ul>
+          <ul class="ul-home">
+            <li class="ul-home__itens">
+              <a href="../index.html">home</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="#">sobre</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="../projetos/projetos.html">projetos</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="../contatos/contatos.html">contatos</a>
+            </li>
+          </ul>
         </nav>
-        </header>
+      </header>
 
         <main class="main-sobre">
             <section class="section-sobre">
