--- a/index.html
+++ b/index.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joelson Vicente</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index/index.css" />
+  </head>
+  <body>
     <div class="home">
-        <header class="header-home">
+      <header class="header-home">
         <p>Joelson Vicente</p>
+        <input type="checkbox" id="menu" class="hide" />
+        <label for="menu" class="hamburguer">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
         <nav>
-            <ul class="ul-home">
-                <li class="ul-home__itens">
-                    <a href=".#">home</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="sobre/sobre.html">sobre</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="projetos/projetos.html">projetos</a>
-                </li>
-                <li class="ul-home__itens">
-                    <a href="contatos/contatos.html">contatos</a>
-                </li>
-            </ul>
+          <ul class="ul-home">
+            <li class="ul-home__itens">
+              <a href=".#">home</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="sobre/sobre.html">sobre</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="projetos/projetos.html">projetos</a>
+            </li>
+            <li class="ul-home__itens">
+              <a href="contatos/contatos.html">contatos</a>
+            </li>
+          </ul>
         </nav>
-        </header>
+      </header>
 
-        <main class="main-home">
-            <p class="destaque">desenvolvedor web & progamador</p>
-            <h1>desenvolvendo</h1>
-            <p>Sou um desenvolvedor web e programador apaixonado por tecnologia e design. Meu objetivo é transformar ideias em soluções digitais criativas, juntando estética e desempenho em cada projeto.</p>
-        </main>
-
+      <main class="main-home">
+        <p class="destaque">desenvolvedor web & progamador</p>
+        <h1>desenvolvendo</h1>
+        <p>
+          Sou um desenvolvedor web e programador apaixonado por tecnologia e
+          design. Meu objetivo é transformar ideias em soluções digitais
+          criativas, juntando estética e desempenho em cada projeto.
+        </p>
+      </main>
     </div>
-</body>
+  </body>
 </html>
