--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -57,12 +57,12 @@
             </section>
 
             <section class="project-home">
-                <h2>Clone de Instagram</h2>
-                <img src="../prints-projetos/Captura de tela 2024-12-02 194426.png" alt="blog semântico">
-                <span>projeto ficticio</span>
+                <h2>Granaboard</h2>
+                <img src="../prints-projetos/granaboard.png" alt="blog semântico">
+                <span>projeto onde trabalhei meu js pra deixar um dashboard financeiro funcionavel</span>
                 <div class="project-home__links">
-                    <a href="https://clone-instagram-bsb2m3ege-joelsondevelopers-projects.vercel.app/">ir ao site</a>
-                    <a href="https://github.com/joelsondeveloper/clone-instagram">ir ao repositório</a>
+                    <a href="https://granaboard.vercel.app/">ir ao site</a>
+                    <a href="https://github.com/joelsondeveloper/granaboard">ir ao repositório</a>
                 </div>
             </section>
 
